--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Binuzu</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="./images/favicon.svg" type="">
+  <link rel="shortcut icon" href="images/favicon.svg" type="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <!-- <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"> -->
 </head>
@@ -390,14 +390,7 @@
   <!-- vide div start -->
  
 <div class="video-tour-section">
-<video src=""></video>
-
-  <div class="video-overlay">
-    <img src="./images/videoTourThumb1_1.jpg.jpeg" alt="">
-    <h2>Your Custom Heading</h2>
-    <p>Your custom description text goes here.</p>
-  </div>
- </div>
+  <video src="./Mastering 2D Transforms in CSS __ Episode - 25.mp4"></video>
 </div>
 
   <!-- video div end -->
