--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Binuzu</title>
+  <title>Binuza</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="images/favicon.svg" type="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-  <!-- <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+
 </head>
 
 <body>
+  <!-- navbar start -->
   <nav>
     <!-- Logo -->
     <div class="logo">
@@ -22,8 +24,8 @@
     <!-- Links -->
     <div class="nav-links">
       <a href="#">Home <i class="fa fa-caret-down"></i></a>
-      <a href="#">About Us</a>
-      <a href="#">Services</a>
+      <a href="#about">About Us</a>
+      <a href="#service">Services</a>
       <a href="#">Blog</a>
       <!-- <a href=""><img src="./images/icons8-search-26.png" alt=""></a> -->
       <!-- Icons -->
@@ -35,6 +37,7 @@
     </div>
 
   </nav>
+  <!-- navbar end -->
 
   <!-- hero section start -->
   <div class="herosection2">
@@ -56,7 +59,8 @@
   <!-- hero section end -->
 
   <!-- about our company div start -->
-  <div class="about-section">
+   
+  <div id="about" class="about-section">
     <div class="imageside">
       <img src="./images/about-2.jpg.jpeg" alt="" class="image1">
       <img src="./images/about-3.jpg.jpeg" alt="" class="image2">
@@ -108,8 +112,8 @@
       <div class="avatar">
         <img src="./images/Avatar.png" alt="">
 
-        <h3>Join our 50503+ <br>
-          Satisfied World Clients</h3>
+        <h6>Join our 50503+ <br>
+          Satisfied World Clients</h6>
 
         <!-- avatar end -->
       </div>
@@ -138,7 +142,7 @@
   <!-- partner div end -->
 
   <!-- services div start -->
-  <div class="services">
+  <div id="service" class="services">
     <button class="company">Our Services</button>
     <h2 class="second-heading" style="margin-top: 30px;">
       Largest Demand Partners <br>
@@ -289,7 +293,7 @@
 
   <!-- teams wala div start -->
   <div class="services">
-    <button class="company" style="width: 90px;;">Our Team</button>
+    <button class="company" style="width: 100px;;">Our Team</button>
     <h2 class="second-heading" style="margin-top: 30px;">
       Meet with Our Expert <br> &nbsp; &nbsp; Team Members
     </h2>
@@ -388,12 +392,306 @@
   <!-- teams wala div end -->
 
   <!-- vide div start -->
- 
-<div class="video-tour-section">
-  <video src="./Mastering 2D Transforms in CSS __ Episode - 25.mp4"></video>
-</div>
+
+  <div class="videotour">
+
+    <div class="services">
+      <button class="company ">Why Choose Us?</button>
+      <h2 class="second-heading again" style="margin-top: 30px;">
+        How We Transform Businesses Through <br>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Expert Solutions for You
+
+      </h2>
+      <div class="playbutton">
+
+        <a class="button is-play" href="#">
+          <div class="button-outer-circle has-scale-animation"></div>
+          <div class="button-outer-circle has-scale-animation has-delay-short"></div>
+          <div class="button-icon is-play">
+            <svg height="100%" width="100%" fill="#f857a6" viewBox="0 0 30 30">
+              <polygon class="triangle" points="5,0 30,15 5,30"></polygon>
+              <path class="path" d="M5,0 L30,15 L5,30z" fill="none" stroke="#f857a6" stroke-width="1"></path>
+            </svg>
+          </div>
+        </a>
+
+      </div>
+    </div>
+
+
+  </div>
 
   <!-- video div end -->
+
+  <!-- our success section start -->
+  <div class="oursuccess">
+    <div class="writingside side2">
+      <button class="company portfolio">Our Portfolio</button>
+      <h2 class="second-heading heading">
+        Our Success Stories
+      </h2>
+      <p class="first-para">An IT firm or MSP who keeps your IT running smoothly at all times is like a plumber who
+        fixes your pipes; that's what they are supposed to do.</p>
+    </div>
+    <div class="cardsSection">
+      <div class="doosriside aik">
+        <div class="brandingwala">
+          <button
+            style="background-color: #E0F8F5; color: #ff5a2c; padding: 5px; width: 70px; border: none; margin-top: 20px; margin-left: 20px; font-weight:600; ">SOCIAL</button>
+          <h3 style="font-size: 24px; margin-top: 20px; margin-left: 20px; color: rgb(50, 50, 50);">Social Media
+            Analysis</h3>
+        </div>
+      </div>
+      <div class="doosriside do">
+        <div class="brandingwala">
+          <button
+            style="background-color: #E0F8F5; color: #ff5a2c; padding: 5px; width: 70px; border: none; margin-top: 20px; margin-left: 20px; font-weight:600; ">BRANDING</button>
+          <h3 style="font-size: 24px; margin-top: 20px; margin-left: 20px; color: rgb(50, 50, 50);  cursor: pointer; ">
+            Brand Identity Production</h3>
+        </div>
+      </div>
+      <div class="doosriside teen">
+        <div class="brandingwala">
+          <button
+            style="background-color: #E0F8F5; color: #ff5a2c; padding: 5px; width: 70px; border: none; margin-top: 20px; margin-left: 20px; font-weight:600; ">BRANDING</button>
+          <h3 style="font-size: 24px; margin-top: 20px; margin-left: 20px; color: rgb(50, 50, 50);">Creative Branding
+            Design</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- our success section end -->
+
+  <!-- Clients testimonial start -->
+  <div class="services clients">
+    <button style="background-color: white;" class="company">Our Testimonials</button>
+    <h2 class="second-heading" style="margin-top: 30px;">
+      What Our Client Say On <br>  &nbsp; &nbsp; &nbsp; Google Reviews 
+     
+    </h2>
+    <br><br><br><br><br>
+
+    <div class="testimonialsdiv">
+      <div class="testimonial-card">
+        <!-- Left Side: Image -->
+        <img src="./images/testimonialClient2_1.jpg.jpeg" alt="Profile">
+
+        <!-- Right Side: Content -->
+        <div class="testimonial-content">
+          <div class="testimonial-header">
+            <div class="icon">💬</div>
+            <div class="stars">★★★★★</div>
+          </div>
+
+          <p>
+            The team transformed our brand's online presence with creativity and precision.
+            The results exceeded our expectations!”
+          </p>
+          <br><br>
+          <strong>William Jeck</strong> <span>/ CEO of Vutech</span>
+        </div>
+      </div>
+
+      <div class="testimonial-card">
+        <!-- Left Side: Image -->
+        <img src="./images/testimonialClient2_2.jpg.jpeg" alt="Profile">
+
+        <!-- Right Side: Content -->
+        <div class="testimonial-content">
+          <div class="testimonial-header">
+            <div class="icon">💬</div>
+            <div class="stars">★★★★★</div>
+          </div>
+
+          <p>
+            The team transformed our brand's online presence with creativity and precision.
+            The results exceeded our expectations!”
+          </p>
+          <br><br>
+          <strong>Demon Cats</strong> <span>/ CEO of Mirzan</span>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  <!-- clients testmonial end -->
+
+  <!-- faq div start -->
+  <div class="chooseUS faqdiv">
+    <div class="writingside side1 faqside">
+      <button class="company choose">Our FAQs</button>
+      <h2 class="second-heading">Frequently Asked <br> Questions About <br> Binuza Company
+        <p class="first-para faqpara">An IT firm or MSP who keeps your IT running smoothly at all times is like a
+          plumber who fixes your pipes; that's what they are supposed to do.</p>
+
+        <div class="grade faqgrade">
+          <button class="button faqbtn">
+            Our Contact
+            <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+              <path fill-rule="evenodd"
+                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+                clip-rule="evenodd"></path>
+            </svg>
+          </button>
+          <div class="faqcontact">
+            <img src="./images/icons8-call-icon-67.png" alt="" width="50px" height="50px">
+            <span class="faqnumber">Call Us <br> +88 (09) 53 33 09 </span>
+          </div>
+        </div>
+
+    </div>
+
+    <div class="accordion accordion-flush accordiondiv" id="accordionFlushExample">
+      <div class="accordion-item item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            <h4> 1. What Services Do You Offer For Marketing?</h4>
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Mauris ut enim sit amet lacus ornare ullamcorper. Praesent placerat neque eu purus
+            rhoncus, vel tincidunt odio ultrices.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            <h4> 2. Which locations do you serve? In provide the global services?</h4>
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            Mauris ut enim sit amet lacus ornare ullamcorper. Praesent placerat neque eu purus rhoncus, vel tincidunt
+            odio ultrices.</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <h4> 3. How can I track my shipment with my products?</h4>
+
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Mauris ut enim sit amet lacus ornare ullamcorper. Praesent placerat neque eu purus
+            rhoncus, vel tincidunt odio ultrices.
+            </button></div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <h4> 4. What is your estimated delivery time for a single consulting?</h4>
+
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Mauris ut enim sit amet lacus ornare ullamcorper. Praesent placerat neque eu purus
+            rhoncus, vel tincidunt odio ultrices.
+            </button></div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <h4> 5. How can I start business consulting with your team?</h4>
+
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Mauris ut enim sit amet lacus ornare ullamcorper. Praesent placerat neque eu purus
+            rhoncus, vel tincidunt odio ultrices.
+            </button></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- faq div end -->
+  <!-- footer div start -->
+  <div class="footerdiv">
+    <div class="contentkadiv">
+      <h2 style="color: white;" class="second-heading" style="margin-top: 30px;">
+        Like to Learn More About Our <br>
+        &nbsp; &nbsp; Projects and Expertise?
+      </h2>
+      <button class="button footerbtn">
+        Get Free Consultation
+        <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+          <path fill-rule="evenodd"
+            d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z"
+            clip-rule="evenodd"></path>
+        </svg>
+      </button>
+    </div>
+    <div class="footernavbar">
+      <div class="usefullLinks">
+        <h5>Usefull Links</h5>
+        <a href="">All Services</a>
+        <a href="">24/7 Support</a>
+        <a href="">Our Team</a>
+        <a href="">Tour Places</a>
+        <a href="">Reviews</a>
+      </div>
+
+      <div class="usefullLinks">
+        <h5>About Us</h5>
+        <a href="">About Us</a>
+        <a href="">Legal Notice</a>
+        <a href="">Terms and Conditions</a>
+        <a href="">Contact Us</a>
+        <a href="">Apple Store</a>
+      </div>
+
+      <div class="usefullLinks">
+        <h5>Service</h5>
+        <a href="">Bussiness Strategy</a>
+        <a href="">Financial Solution</a>
+        <a href="">Marketing Strategy</a>
+        <a href="">Consultant Services</a>
+        <a href="">Financial Strategy</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="logodiv"><img src="./images/white-logo.svg" alt="logo"></div>
+      <div class="faqcontact phonediv">
+        <img src="./images/phoneicon.png" alt="" width="30px" height="30px">
+        <span style="color: #ff5a2c;" class="faqnumber">Phone: <br> <span style="color: white;">704 555 0127</span></span> 
+      </div>
+      <div class="faqcontact phonediv">
+        <img src="./images/emailicon.png" alt="" width="20px" height="20px">
+        <span style="color: #ff5a2c;" class="faqnumber">Mail Us: <br><span style="color: white;">binuza@gmail.com</span></span>
+      </div>
+       <div class="faqcontact phonediv addressdiv">
+        <img src="./images/addressicon.png" alt="" width="30px" height="30" style="color: black;">
+        <span style="color: #ff5a2c;" class="faqnumber">Address: <br> <span style="color: white;">3770 Hidden Meadow Drive</span></span>
+      </div>
+
+    </div>
+  </div>
+<!-- final footer div start -->
+   <div class="finalfooter">
+    <div class="copyright">
+      <h6>© 2025 binuza Business Consulting / All rights reserved</h6>
+    </div>
+    <div class="socialmediaicons">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+    </div>
+   </div>
+   <!-- final footer div end -->
+  <!-- footer div end -->
+
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
