--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- hero section end -->
 
   <!-- about our company div start -->
-   
+
   <div id="about" class="about-section">
     <div class="imageside">
       <img src="./images/about-2.jpg.jpeg" alt="" class="image1">
@@ -466,8 +466,8 @@
   <div class="services clients">
     <button style="background-color: white;" class="company">Our Testimonials</button>
     <h2 class="second-heading" style="margin-top: 30px;">
-      What Our Client Say On <br>  &nbsp; &nbsp; &nbsp; Google Reviews 
-     
+      What Our Client Say On <br> &nbsp; &nbsp; &nbsp; Google Reviews
+
     </h2>
     <br><br><br><br><br>
 
@@ -663,21 +663,24 @@
       <div class="logodiv"><img src="./images/white-logo.svg" alt="logo"></div>
       <div class="faqcontact phonediv">
         <img src="./images/phoneicon.png" alt="" width="30px" height="30px">
-        <span style="color: #ff5a2c;" class="faqnumber">Phone: <br> <span style="color: white;">704 555 0127</span></span> 
+        <span style="color: #ff5a2c;" class="faqnumber">Phone: <br> <span style="color: white;">704 555
+            0127</span></span>
       </div>
       <div class="faqcontact phonediv">
         <img src="./images/emailicon.png" alt="" width="20px" height="20px">
-        <span style="color: #ff5a2c;" class="faqnumber">Mail Us: <br><span style="color: white;">binuza@gmail.com</span></span>
+        <span style="color: #ff5a2c;" class="faqnumber">Mail Us: <br><span
+            style="color: white;">binuza@gmail.com</span></span>
       </div>
-       <div class="faqcontact phonediv addressdiv">
+      <div class="faqcontact phonediv addressdiv">
         <img src="./images/addressicon.png" alt="" width="30px" height="30" style="color: black;">
-        <span style="color: #ff5a2c;" class="faqnumber">Address: <br> <span style="color: white;">3770 Hidden Meadow Drive</span></span>
+        <span style="color: #ff5a2c;" class="faqnumber">Address: <br> <span style="color: white;">3770 Hidden Meadow
+            Drive</span></span>
       </div>
 
     </div>
   </div>
-<!-- final footer div start -->
-   <div class="finalfooter">
+  <!-- final footer div start -->
+  <div class="finalfooter">
     <div class="copyright">
       <h6>© 2025 binuza Business Consulting / All rights reserved</h6>
     </div>
@@ -686,11 +689,11 @@
       <i class="fa-brands fa-twitter"></i>
       <i class="fa-brands fa-instagram"></i>
     </div>
-   </div>
-   <!-- final footer div end -->
+  </div>
+  <!-- final footer div end -->
   <!-- footer div end -->
 
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
