--- a/login.html
+++ b/login.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>login</title>
     <link rel="shortcut icon" href="images/favicon.svg" type="">
-      <style>
+    <style>
         body {
             font-family: Arial, sans-serif;
-            background:  linear-gradient(rgba(21, 21, 21, 0.747), rgba(40, 40, 40, 0.995)), url("./images/portfolioThumb2_1.jpg.jpeg");
+            background-color: #f4f4f9;
+            background: linear-gradient(rgba(21, 21, 21, 0.747), rgba(40, 40, 40, 0.995)), url("./images/portfolioThumb2_3.jpg.jpeg");
             background-size: cover;
             margin: 0;
             padding: 0;
@@ -76,7 +78,7 @@
         }
 
         button:hover {
-            background-color:  #ff3b19;
+            background-color: #ff3b19;
         }
 
         .error {
@@ -87,10 +89,11 @@
         }
     </style>
 </head>
+
 <body>
-      <div class="container">
-        <h1>Sign Up</h1>
-        <form id="signup-form">
+    <div class="container">
+        <h1>Login</h1>
+        <form id="login-form">
             <div class="form-group">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" placeholder="Enter your email" required>
@@ -99,34 +102,24 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" placeholder="Enter your password" required>
             </div>
-            <div class="form-group">
-                <label for="confirm-password">Confirm Password</label>
-                <input type="password" id="confirm-password" placeholder="Confirm your password" required>
-                <div class="error" id="error-message" style="display: none;">Passwords do not match</div>
-            </div>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Login</button>
         </form>
     </div>
 
-      <script>
-        const signupForm = document.getElementById('signup-form');
-        const errorMessage = document.getElementById('error-message');
+    <script>
+        const loginForm = document.getElementById('login-form');
 
-        signupForm.addEventListener('submit', (e) => {
+        loginForm.addEventListener('submit', (e) => {
             e.preventDefault();
 
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirm-password').value;
 
-            if (password !== confirmPassword) {
-                errorMessage.style.display = 'block';
-            } else {
-                errorMessage.style.display = 'none';
-                alert('Sign-up successful!');
-                window.location.href = "./login.html";
-            }
+            alert(`Logged in with Email: ${email}`);
+
+            window.location.href = "./home.html";
         });
     </script>
 </body>
+
 </html>
